--- a/css/main.css
+++ b/css/main.css
@@ -14,31 +14,31 @@ img {
 }
 
 h1, h2 {
-  font-family: 'Patua One', san-serif;
+  font-family: "Patua One", san-serif;
   color: #5d8432;
   text-transform: uppercase;
 }
 
 figcaption {
-  font-size: .9rem;
+  font-size: .8rem;
   font-style: italic;
   text-align: center;
 }
 
 figcaption:nth-child(2) {
-  font-size: .9rem;
+  font-size: .8rem;
   font-style: italic;
   text-align: center;
 }
 
 figcaption:nth-child(3) {
-  font-size: .9rem;
+  font-size: .8rem;
   font-style: italic;
   text-align: center;
 }
 
 nav {
-  font-family: 'Patua One', san-serif;
+  font-family:"Patua One", san-serif;
   font-size: 1.125rem;
   font-weight: bold;
 }
