--- a/css/main.css
+++ b/css/main.css
@@ -20,19 +20,19 @@ h1, h2 {
 }
 
 figcaption {
-  font-size: .9rem;
+  font-size: 1rem;
   font-style: italic;
   text-align: center;
 }
 
 figcaption:nth-child(2) {
-  font-size: .9rem;
+  font-size: 1rem;
   font-style: italic;
   text-align: center;
 }
 
 figcaption:nth-child(3) {
-  font-size: .9rem;
+  font-size: 1rem;
   font-style: italic;
   text-align: center;
 }
