--- a/css/main.css
+++ b/css/main.css
@@ -20,26 +20,26 @@ h1, h2 {
 }
 
 figcaption {
-  font-size: 1rem;
+  font-size: .8rem;
   font-style: italic;
   text-align: center;
 }
 
 figcaption:nth-child(2) {
-  font-size: 1rem;
+  font-size: .8rem;
   font-style: italic;
   text-align: center;
 }
 
 figcaption:nth-child(3) {
-  font-size: 1rem;
+  font-size: .8rem;
   font-style: italic;
   text-align: center;
 }
 
 nav {
   font-family: "Patua One", san-serif;
-  font-size: 1.126rem;
+  font-size: 1.125rem;
   font-weight: bold;
 }
 
