--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ figcaption:nth-child(1) {
 }
 
 figcaption:nth-child(2) {
-  font-size: .8rem;
+  font-size: .rem;
   font-style: italic;
   text-align: center;
 }
