--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,13 @@ figcaption {
 }
 
 figcaption:nth-child(1) {
-  font-size: 1rem;
+  font-size: .8rem;
+  font-style: italic;
+  text-align: center;
+}
+
+figcaption:nth-child(2) {
+  font-size: .8rem;
   font-style: italic;
   text-align: center;
 }
